# websocket_mcp

./: LICENSE  README.md  main.py  pyproject.toml
src/websocket_mcp/: local_llm_client.py  local_llm_server.py  mcp_client.py  mcp_server.py
