[project]
name = "websocket-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.8.0",
    "ollama>=0.4.7",
    "websockets>=15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server = "websocket_mcp.mcp_server:main"
mcp-client = "websocket_mcp.mcp_client:main"
local-llm-server = "websocket_mcp.local_llm_server:main"
local-llm-client = "websocket_mcp.local_llm_client:main"
